trunk/src/sudoku-ui.css
body {
   -webkit-user-select: none;
   user-select: none;
   font: 10pt Arial;
}
h1 {
   font: 24pt "arial black", "arial bold", "sans-serif";
}
.puzzlename {
   text-align:center;
   font:20pt "arial black","arial bold","sans-serif";
   padding-bottom: 10px;
}
/* Font loading for firefox */
@font-face {
        font-family: 'Covered By Your Grace';
        font-style: normal;
        font-weight: normal;
        src: local('Covered By Your Grace'),
             local('CoveredByYourGrace'),
             url('CoveredByYourGrace.ttf') format('truetype'); }
/* Font loading for chrome */
@media screen {
  @font-face {
        font-family: 'Covered By Your Grace';
        font-style: normal;
        font-weight: normal;
        src: local('Covered By Your Grace'),
             local('CoveredByYourGrace'),
             url('CoveredByYourGrace.ttf') format('truetype'); } }
table.sudoku {
        border-collapse: collapse; }
table.sudoku-select {
        border-collapse: collapse;
        border: 1px solid transparent;
        line-height: 100%;
        text-align: center; vertical-align: middle;
        padding: 0px; }
table.sudoku-work-table {
        border-collapse: collapse;
        border: 0;
        margin: 0;
        width: 100%;
        height: 100%; }
table.sudoku-work-table td {
        border: 0;
        padding: 0;
        margin: 0;
        line-height: 0;
        width: 16px; height: 16px;
        text-align: center;
        overflow: hidden;
        vertical-align: top; }
table.sudoku-work-table div {
        color: #22c;
        font: 15px 'Covered By Your Grace', sans-serif;
        width: 14px;
        margin: -5px 0; }
table.sudoku-work-table tr:nth-child(1) div {
        margin: -5px 0; }
table.sudoku-work-table tr:nth-child(3) div {
        margin: -5px 0; }
td.sudoku-cell {
        width: 46px; height: 46px;
        text-align: center; vertical-align: middle;
        line-height: 0;
        border: 1px solid black; }
div.sudoku-border {
        width: 44px; height: 44px;
        text-align: center; vertical-align: middle;
        border: 1px solid transparent; overflow: hidden; }
div.sudoku-work {
        width: 44px; height: 44px;
        text-align: center;
        cursor: hand;
        padding: 0; margin: 0; border: 0; }
div.sudoku-answer {
        width: 66px; height: 66px;
        text-align: center;
        cursor: hand;
        padding: 0; margin: -12px; border: 0;
        color: #22c;
        font: 50px 'Covered By Your Grace', sans-serif;}
div.sudoku-given {
        width: 48px; height: 48px;
        text-align: center; vertical-align: middle;
        cursor: default;
        padding: 0; margin: -3px;
        line-height: 0;
        font-weight: bold;
        font: 34px 'arial black', sans-serif;}
td.sudoku-border {
        background: black; height: 1px; width: 1px;
        border: 1px solid black;}
img.sudoku-border {
        background: black; height: 1px; width: 1px; }
div.sudoku-popup {
        position: absolute;
        height: 42px; width: 220px;
        font: 27px 'arial black', sans-serif;
        cursor: default;
        text-align: center;
        padding: 2px;
        vertical-align: middle;
        border: 3px solid black;
        background-color: white;
        display: none; }
div.sudoku-popup#victory {
        background-color: yellow; }
div.sudoku-popup#file {
        height: auto; width: auto; }
div.work-menu {
        position: absolute;
        display: none;
        overflow: hidden; }
div.work-menu table {
        border: 2px solid black;
        border-collapse: collapse;
        border-spacing: 0;
        width: 72px;
        height: 96px; }
div.work-menu td {
        padding: 0;
        }
div.menu-clip {
        height: 24px; width: 24px; border:0;
        text-align:center;
        vertical-align:middle;
        overflow:hidden; }
div.work-menu div.menu-text {
        color: #aaa;
        font: 24px Covered By Your Grace; padding:0; margin:0;
        height: 34px; width: 34px; border:0;
        margin: -5px;
        vertical-align:middle;
        cursor: pointer;
        background-color:#fff;
        opacity:1; }
div.menu-mode {
        height: 34px; width: 34px; border:0;
        background-repeat:no-repeat;
        background-image:url(pencilgray.png);
        background-position:center;
        vertical-align:middle;
        cursor: default;
        background-color:transparent;
        opacity:1; }
div.puzzle-menu {
        position: absolute;
        border: 2px solid black;
        display: none;
        overflow: hidden; }
div.puzzle-menu table {
        border-collapse: collapse;
        border-spacing: 0;
        width: 72px;
        height: 72px; }
div.puzzle-menu td {
        padding: 0;
        }
div.puzzle-menu div.menu-text {
        color: #aaa;
        font: 16px Arial Black; padding:0; margin:0;
        height: 24px; width: 24px; border:0;
        margin: -0px;
        vertical-align:middle;
        cursor: pointer;
        background-color:#fff;
        opacity:1; }
.save-closebutton {
        background-image:url(closebutton.png);
        background-position:center center; background-repeat:no-repeat;
        position:absolute;
        top:0;right:0;height:26;width:26; }
.save-closebutton:hover {
        background-image:url(closebutton-hover.png); }
.save-outerbox {
        padding: 10px; }
.save-outerbox center {
        font: 16pt Arial Black;
        padding: 5px; }
.save-link {
        position:absolute;
        z-index:1;
        font: 10pt arial;
        margin:10px 0; }
#shortenedurl {
        width: 120px;
        margin: -3px 0;
        display: none; }
.save-listbox {
        overflow: auto;
        width: 456px;
        height: 236px;
        border: 2px solid gray;
        margin: 5px 0; }
.save-listbox ul {
        padding: 10px 0;
        margin: 0; }
.save-listbox li {
        text-align: left;
        list-style-type: none;
        padding: 2px 10px; margin: 0;
        font: 10pt Arial;
        line-height: 22px; }
.save-listbox li:nth-of-type(odd) {
        background-color:#eef; }
.save-listbox li:hover {
        background-color:#ccf; }

